--- a/src/Styles/Card.scss
+++ b/src/Styles/Card.scss
@@ -2,4 +2,16 @@
 
 .card{
     background-color:$DarkGrayish;
+
+
+    margin: 15px;
+        
+ 
+
+     
+@media (min-width: 31.25rem) {
+  
+      width: 30rem;
+  
+  }
 }
