p4 added v1 styling for text

--- a/src/Styles/Container.css
+++ b/src/Styles/Container.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap");
 /* $bodyBackground: #202632;
 $cardBackground:     #313A49;
 $textColor:    #AABBC4;
