--- a/src/Styles/Button.css
+++ b/src/Styles/Button.css
@@ -6,8 +6,34 @@ $buttonColor:       #306E59;
 $buttonHoverColor:     #52FEAA ;
  */
 .button {
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+}
+
+.button:hover {
+  -webkit-box-shadow: 0px 0px 34px 3px #53FFAB;
+  box-shadow: 0px 0px 34px 3px #53FFAB;
+}
+
+.button-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 45px;
+  width: 45px;
+  margin: 0;
+  padding: 0;
+  border-radius: 100%;
+}
+
+.button-wrapper, .button {
   background-color: #52ffa8;
-  font-family: "Manrope";
-  font-weight: 200;
 }
 /*# sourceMappingURL=Button.css.map */
