--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -8,6 +8,21 @@ $buttonHoverColor:     #52FEAA ;
 .card {
   background-color: #323a49;
   margin: 15px;
+  padding: 25px;
+  border-radius: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 @media (min-width: 31.25rem) {
