--- a/src/Styles/Button.css
+++ b/src/Styles/Button.css
@@ -31,6 +31,7 @@ $buttonHoverColor:     #52FEAA ;
   margin: 0;
   padding: 0;
   border-radius: 100%;
+  border: none;
 }
 
 .button-wrapper, .button {
