--- a/src/Styles/Button.scss
+++ b/src/Styles/Button.scss
@@ -1,40 +1,29 @@
 @import "../Variables/Variables.scss";
 
 .button{
-   
-
     cursor: pointer;
-    
     margin: 0;
     padding: 0;
-
-    
-    
 }
 
 .button:hover{
     -webkit-box-shadow: 0px 0px 34px 3px #53FFAB; 
-box-shadow: 0px 0px 34px 3px #53FFAB;
+    box-shadow: 0px 0px 34px 3px #53FFAB;
 }
 
 .button-wrapper{
     display: flex;
-   
     justify-content: center;
     align-items: center;
-
     height:45px;
     width:45px;
-    
-margin: 0;
-padding: 0;
-
-border-radius: 100%;
-    
- 
+    margin: 0;
+    padding: 0;
+    border-radius: 100%;
+    border: none;
 }
 
 .button-wrapper, .button{
     background-color: $NeonGreen;
-   
+
 }
