--- a/src/Styles/Button.scss
+++ b/src/Styles/Button.scss
@@ -4,6 +4,8 @@
     cursor: pointer;
     margin: 0;
     padding: 0;
+
+    
 }
 
 .button:hover{
@@ -21,6 +23,8 @@
     padding: 0;
     border-radius: 100%;
     border: none;
+
+    transform: translateY(45px);
 }
 
 .button-wrapper, .button{
