--- a/src/Styles/Card.scss
+++ b/src/Styles/Card.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     
     @media (min-width: 31.25rem) {
         width: 30rem;
